--- a/about.html
+++ b/about.html
@@ -52,5 +52,8 @@ Scelerisque consequat, faucibus et, et.</p>
       </tr>
       
     </table>
-</font></body>
+</font>
+<footer><hr>
+    <p align="center">2025 Mignot | Portfolio Project</p>
+  </footer></body>
 </html>
